Add missing role fields to 4 agents
- Bowery King: CMO
- Operator: CCO
- Sofia: CRO
- Elder: Advisor

--- a/agents/bowery-king.yml
+++ b/agents/bowery-king.yml
@@ -1,5 +1,6 @@
 id: bowery-king
 name: The Bowery King
+role: CMO
 codename: King of the Streets
 description: |
   Chief Marketing Officer of KenyaClaw. The Bowery King knows
