--- a/agents/elder.yml
+++ b/agents/elder.yml
@@ -1,5 +1,6 @@
 id: elder
 name: The Elder
+role: Advisor
 codename: The Wise One
 description: |
   Strategic Advisor to KenyaClaw. The Elder sits above the
